<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PostPageContainer">

    <TextView
        style="@style/PostTitle"
        android:text="@string/app_name"
        android:drawableStart="@drawable/ic_location"/>

    <LinearLayout style="@style/PostCardContainer">
        <TextView style="@style/PostLabel" android:text="@string/upload_photo"/>
        <Button
            android:id="@+id/btn_select_photo"
            style="@style/PostButtonOutline"
            android:text="@string/select_photo" />
    </LinearLayout>

    <LinearLayout style="@style/PostCardContainer">
        <TextView style="@style/PostLabel" android:text="@string/description"/>
        <EditText
            android:id="@+id/et_description"
            style="@style/PostEditTextStyle"
            android:hint="@string/description_hint" />
    </LinearLayout>

    <LinearLayout style="@style/PostCardContainer">
        <TextView style="@style/PostLabel" android:text="@string/tag_location"/>
        <EditText
            android:id="@+id/et_location"
            style="@style/PostEditTextStyle"
            android:hint="@string/search_location" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_publish"
        style="@style/PostButtonPrimary"
        android:text="@string/publish" />
</LinearLayout>