<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profile_placeholder"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_background" />

    <EditText
        android:id="@+id/full_name"
        style="@style/EditTextStyle"
        android:hint="@string/full_name" />

    <EditText
        android:id="@+id/email"
        style="@style/EditTextStyle"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/password"
        style="@style/EditTextStyle"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_password"
        style="@style/EditTextStyle"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_signup"
        style="@style/ButtonPrimary"
        android:text="@string/signup" />

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonOutline"
        android:text="@string/already_have_account" />
</LinearLayout>
