<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <!-- Declare the TripCreateViewModel variable -->
        <variable
            name="viewModel"
            type="com.example.travelog.ui.tripCreate.TripCreateViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            style="@style/PostPageContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/PostTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_trip"/>

            <LinearLayout
                style="@style/PostCardContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    style="@style/PostLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_name"/>
                <EditText
                    android:id="@+id/et_trip_name"
                    style="@style/PostEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_name_hint"
                    android:text="@={viewModel.tripName}" />
            </LinearLayout>

            <LinearLayout
                style="@style/PostCardContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    style="@style/PostLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_destination"/>
                <AutoCompleteTextView
                    android:id="@+id/et_trip_destination"
                    style="@style/PostEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_destination_hint"
                    android:completionThreshold="1"
                    android:text="@={viewModel.tripDestination}" />
            </LinearLayout>

            <LinearLayout
                style="@style/PostCardContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    style="@style/PostLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_start_date"/>
                <TextView
                    android:id="@+id/tv_trip_start_date"
                    style="@style/PostLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.tripStartDate}" />
            </LinearLayout>


            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.isLoading ? android.view.View.VISIBLE : android.view.View.GONE}" />

            <Button
                android:id="@+id/btn_create_trip"
                style="@style/PostButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_trip_button"
                android:enabled="@{!viewModel.isLoading}"
                android:layout_marginTop="24dp" />

        </LinearLayout>
    </ScrollView>
</layout>
